Fix z-index

--- a/src/app/header/nav-menu/nav-menu.component.scss
+++ b/src/app/header/nav-menu/nav-menu.component.scss
@@ -1,6 +1,7 @@
 :host {
   position: sticky;
   width: 100%;
+  z-index: 10;
 }
 
 .sidenav-container {
